# dolphin-switch-port

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  Readme.md  build.sh  clean.sh  cmake_install.cmake  compile_commands.json  dolphin-emu.cbp
CMake/: Findlibnx.cmake
Source/: CMakeLists.txt  Makefile  cmake_install.cmake
Source/Core/: CMakeLists.txt  Makefile  cmake_install.cmake
Source/Core/AudioCommon/: Makefile  cmake_install.cmake
Source/Core/Common/: CMakeLists.txt  FileUtil.cpp  FileUtil.h  HttpRequest.cpp  HttpRequest.h  Makefile  cmake_install.cmake  switch_test.cpp
Source/Core/Core/: AchievementManager.cpp  BootManager.cpp  Core.cpp  GeckoCodeConfig.cpp  Makefile  NetPlayServer.cpp  WiiUtils.cpp  WiiUtils.h  cmake_install.cmake
Source/Core/Core/Boot/: Boot.cpp  Boot.h  Boot_WiiWAD.cpp
Source/Core/Core/IOS/Network/: SSL.cpp
Source/Core/Core/IOS/Network/KD/: NetKDRequest.cpp
Source/Core/DiscIO/: Makefile  Volume.h  VolumeWad.cpp  VolumeWad.h  cmake_install.cmake
Source/Core/DolphinNoGUI/: CMakeLists.txt  Host.cpp  Main.cpp  MainNoGUI.cpp  Makefile  Platform.cpp  Platform.h  SwitchHost.cpp  SwitchUI.cpp  SwitchUI.h  cmake_install.cmake  dolphin-nogui.nacp  main_build.sh
Source/Core/DolphinQt/: GBAHost.cpp
Source/Core/DolphinQt/NetPlay/: NetPlayDialog.cpp
Source/Core/DolphinTool/: Makefile  ToolHeadlessPlatform.cpp  cmake_install.cmake
Source/Core/InputCommon/: Makefile  cmake_install.cmake
Source/Core/UICommon/: AutoUpdate.cpp  GameFile.cpp  Makefile  NetPlayIndex.cpp  cmake_install.cmake
Source/Core/UpdaterCommon/: UpdaterCommon.cpp
Source/Core/VideoBackends/: Makefile  cmake_install.cmake
Source/Core/VideoBackends/Null/: Makefile  cmake_install.cmake
Source/Core/VideoBackends/OGL/: Makefile  cmake_install.cmake
Source/Core/VideoBackends/Software/: CMakeLists.txt  Makefile  cmake_install.cmake
Source/Core/VideoCommon/: Makefile  cmake_install.cmake
Source/Core/WinUpdater/: Platform.cpp
Source/DSPTool/: StubHost.cpp
Source/SwitchLauncher/: Main.cpp
Source/UnitTests/: CTestTestfile.cmake  Makefile  StubHost.cpp  cmake_install.cmake
Source/UnitTests/Common/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Source/UnitTests/Core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Source/UnitTests/VideoCommon/: CTestTestfile.cmake  Makefile  cmake_install.cmake
